# talax-dictation

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  deny.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.simplify/: contract.sha256  simplify-gate.sh
crates/talax-app/: Cargo.toml  tauri.conf.json
crates/talax-app/icons/: icon.icns
crates/talax-app/src/: commands.rs  lib.rs  main.rs  recording.rs  tray.rs
crates/talax-engine/: Cargo.toml
crates/talax-engine/src/: lib.rs
crates/talax-engine/src/audio/: capture.rs  mod.rs  ring_buffer.rs  vad.rs
crates/talax-engine/src/db/: mod.rs
crates/talax-engine/src/hotkey/: mod.rs
crates/talax-engine/src/inject/: mod.rs
crates/talax-engine/src/pipeline/: dict_corrector.rs  heuristic.rs  mod.rs  ngram_corrector.rs
crates/talax-engine/src/profile/: mod.rs
crates/talax-engine/src/whisper/: mod.rs  model_manager.rs  transcriber.rs
crates/talax-engine/tests/: integration.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.svelte  app.css
ui/src/lib/: api.test.ts  api.ts  latest-request.test.ts  latest-request.ts
ui/src/routes/: Dictate.svelte  Editor.svelte  Onboarding.svelte  Patterns.svelte  Profiles.svelte  Settings.svelte  Stats.svelte
ui/static/accent_presets/: east_asian.json  northern_european.json  south_asian.json  southern_european.json
ui/static/domain_presets/: business.json  devops.json  legal.json  medical.json  programming.json
