[workspace]
members = ["crates/talax-engine", "crates/talax-app"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2024"
license = "BSL-1.1"
authors = ["PureTensor Inc"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
bincode = "1"
thiserror = "2"
tracing = "0.1"
