[workspace]
members = ["crates/talax-engine", "crates/talax-app"]
resolver = "2"

[workspace.package]
version = "1.2.4"
edition = "2024"
license = "BSL-1.1"
authors = ["PureTensor, Inc."]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
rusqlite = { version = "0.40", features = ["bundled"] }
regex = "1"
thiserror = "2"
tracing = "0.1"
