[package]
name = "talax-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
talax-engine = { path = "../talax-engine" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[lib]
name = "talax_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
