[package]
name = "talax-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
talax-engine = { path = "../talax-engine", version = "1.2.6" }
tauri = { version = "2", features = ["tray-icon"] }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[lib]
name = "talax_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
